tests/ui/associated-type-bounds/duplicate_err.stderr
error[E0282]: type annotations needed
  --> $DIR/duplicate_err.rs:7:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0282]: type annotations needed
  --> $DIR/duplicate_err.rs:11:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0282]: type annotations needed
  --> $DIR/duplicate_err.rs:15:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error: unconstrained opaque type
  --> $DIR/duplicate_err.rs:19:51
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                                                   ^^^^^^^^^
   |
   = note: `ETAI1` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_err.rs:21:51
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                                                   ^^^^^^^^^
   |
   = note: `ETAI2` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_err.rs:23:57
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                                                         ^^^^^^^^^
   |
   = note: `ETAI3` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_err.rs:26:14
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `ETAI4` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_err.rs:28:14
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `ETAI5` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_err.rs:30:14
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `ETAI6` must be used in combination with a concrete type within the same crate

error[E0277]: `*const ()` cannot be sent between threads safely
  --> $DIR/duplicate_err.rs:33:18
   |
LL | fn mismatch() -> impl Iterator<Item: Copy, Item: Send> {
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
LL |     iter::empty::<*const ()>()
   |     -------------------------- return type was inferred to be `std::iter::Empty<*const ()>` here
   |
   = help: the trait `Send` is not implemented for `*const ()`

error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/duplicate_err.rs:37:20
   |
LL | fn mismatch_2() -> impl Iterator<Item: Copy, Item: Send> {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
LL |     iter::empty::<String>()
   |     ----------------------- return type was inferred to be `std::iter::Empty<String>` here

error[E0271]: expected `Empty<u32>` to be an iterator that yields `i32`, but it yields `u32`
  --> $DIR/duplicate_err.rs:74:16
   |
LL |     uncallable(iter::empty::<u32>());
   |     ---------- ^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `u32`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `uncallable`
  --> $DIR/duplicate_err.rs:67:32
   |
LL | fn uncallable(_: impl Iterator<Item = i32, Item = u32>) {}
   |                                ^^^^^^^^^^ required by this bound in `uncallable`

error[E0271]: expected `Empty<i32>` to be an iterator that yields `u32`, but it yields `i32`
  --> $DIR/duplicate_err.rs:75:16
   |
LL |     uncallable(iter::empty::<i32>());
   |     ---------- ^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `i32`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `uncallable`
  --> $DIR/duplicate_err.rs:67:44
   |
LL | fn uncallable(_: impl Iterator<Item = i32, Item = u32>) {}
   |                                            ^^^^^^^^^^ required by this bound in `uncallable`

error[E0271]: type mismatch resolving `<() as Trait>::ASSOC == 4`
  --> $DIR/duplicate_err.rs:76:22
   |
LL |     uncallable_const(());
   |     ---------------- ^^ expected `4`, found `3`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected constant `4`
              found constant `3`
note: required by a bound in `uncallable_const`
  --> $DIR/duplicate_err.rs:69:46
   |
LL | fn uncallable_const(_: impl Trait<ASSOC = 3, ASSOC = 4>) {}
   |                                              ^^^^^^^^^ required by this bound in `uncallable_const`

error[E0271]: type mismatch resolving `<u32 as Trait>::ASSOC == 3`
  --> $DIR/duplicate_err.rs:77:22
   |
LL |     uncallable_const(4u32);
   |     ---------------- ^^^^ expected `3`, found `4`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected constant `3`
              found constant `4`
note: required by a bound in `uncallable_const`
  --> $DIR/duplicate_err.rs:69:35
   |
LL | fn uncallable_const(_: impl Trait<ASSOC = 3, ASSOC = 4>) {}
   |                                   ^^^^^^^^^ required by this bound in `uncallable_const`

error[E0271]: type mismatch resolving `<() as Trait>::ASSOC == 4`
  --> $DIR/duplicate_err.rs:78:20
   |
LL |     uncallable_rtn(());
   |     -------------- ^^ expected `4`, found `3`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected constant `4`
              found constant `3`
note: required by a bound in `uncallable_rtn`
  --> $DIR/duplicate_err.rs:71:75
   |
LL | fn uncallable_rtn(_: impl Trait<foo(..): Trait<ASSOC = 3>, foo(..): Trait<ASSOC = 4>>) {}
   |                                                                           ^^^^^^^^^ required by this bound in `uncallable_rtn`

error[E0271]: type mismatch resolving `<u32 as Trait>::ASSOC == 3`
  --> $DIR/duplicate_err.rs:79:20
   |
LL |     uncallable_rtn(17u32);
   |     -------------- ^^^^^ expected `3`, found `4`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected constant `3`
              found constant `4`
note: required by a bound in `uncallable_rtn`
  --> $DIR/duplicate_err.rs:71:48
   |
LL | fn uncallable_rtn(_: impl Trait<foo(..): Trait<ASSOC = 3>, foo(..): Trait<ASSOC = 4>>) {}
   |                                                ^^^^^^^^^ required by this bound in `uncallable_rtn`

error: aborting due to 17 previous errors

Some errors have detailed explanations: E0271, E0277, E0282.
For more information about an error, try `rustc --explain E0271`.
